<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Clue Helper</string>
    <string name="characters">Characters</string>
    <string name="weapons">Weapons</string>
    <string name="rooms">Rooms</string>
    <string name="settings">Settings</string>
    <string name="reset">Reset</string>
    <string name="notes_placeholder">Enter Notes</string>
    <string name="name_scarlet">Ms. Scarlet</string>
    <string name="name_peacock">Mrs. Peacock</string>
    <string name="name_mustard">Col. Mustard</string>
    <string name="name_plum">Prof. Plum</string>
    <string name="name_green">Mr. Green</string>
    <string name="name_orchid">Dr. Orchid</string>
    <string name="weapon_candlestick">Candlestick</string>
    <string name="weapon_dagger">Dagger</string>
    <string name="weapon_leadpipe">Lead Pipe</string>
    <string name="weapon_revolver">Revolver</string>
    <string name="weapon_rope">Rope</string>
    <string name="weapon_wrench">Wrench</string>
    <string name="room_ballroom">Ballroom</string>
    <string name="room_billiard">Billiard Room</string>
    <string name="room_conservatory">Conservatory</string>
    <string name="room_dining">Dining Room</string>
    <string name="room_hall">Hall</string>
    <string name="room_kitchen">Kitchen</string>
    <string name="room_library">Library</string>
    <string name="room_lounge">Lounge</string>
    <string name="room_study">Study</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="force_checkmarks">Force Checkmarks</string>
</resources>