<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_characters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="64dp"
            android:text="@string/characters"
            app:layout_constraintBottom_toTopOf="@+id/btn_weapons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_weapons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/weapons"
            app:layout_constraintBottom_toTopOf="@+id/btn_rooms"
            app:layout_constraintEnd_toEndOf="@+id/btn_characters"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/btn_characters"
            app:layout_constraintTop_toBottomOf="@+id/btn_characters" />

        <Button
            android:id="@+id/btn_rooms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/rooms"
            app:layout_constraintBottom_toTopOf="@+id/btn_settings"
            app:layout_constraintEnd_toEndOf="@+id/btn_weapons"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/btn_weapons"
            app:layout_constraintTop_toBottomOf="@+id/btn_weapons" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/settings"
            app:layout_constraintBottom_toTopOf="@+id/notes"
            app:layout_constraintEnd_toEndOf="@+id/btn_rooms"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/btn_rooms"
            app:layout_constraintTop_toBottomOf="@+id/btn_rooms" />

        <EditText
            android:id="@+id/notes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="40dp"
            android:autofillHints="@string/notes_placeholder"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:lines="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_settings"
            tools:ignore="LabelFor" />

        <View
            android:id="@+id/bottom_spacer_main"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/bottom_space"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notes" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>